--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,10 @@
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "openai": "^3.1.0"
+    "openai": "^3.1.0",
+    "axios": "^1.2.2",
+    "vue": "^3.2.45",
+    "vue-audio-visual": "^3.0.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
