--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,8 @@
     "openai": "^3.1.0",
     "axios": "^1.2.2",
     "vue": "^3.2.45",
-    "vue-audio-visual": "^3.0.3"
+    "vue-audio-visual": "^3.0.3",
+    "aws-iot-device-sdk": "^2.2.12"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
